--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Learn ES6 concepts</h1>
     <script src="app.js"></script>
-    <script src="modules/main.js"></script>
+    <!-- <script src="modules/main.js"></script> -->
   </body>
 </html>
